# AiZO_Projekt_2

./: CMakeLists.txt  Struktura projketu  Struktóra projketu  main.cpp
Algorytmy/MST/: Kruskal.cpp  Kruskal.h  Prim.cpp  Prim.h
Algorytmy/MaksymalnyPrzeplyw/: FordFulkerson.cpp  FordFulkerson.h
Algorytmy/NajkrotszaSciezka/: BellmanFord.cpp  BellmanFord.h  Dijkstra.cpp  Dijkstra.h
Dane/: graf-1.txt  graf-3.txt  graf-4.txt  graf-5.txt  graf-6.txt
Menu/: GrafManager.cpp  GrafManager.h  Menu.cpp  Menu.h
Tablica/: KopiecKrawedzi.cpp  KopiecKrawedzi.h  KrawedzSciezki.cpp  KrawedzSciezki.h  ListaSasiedztwa.cpp  ListaSasiedztwa.h  MacierzIncydencji.cpp  MacierzIncydencji.h  Sciezka.cpp  Sciezka.h  Tablica.h
Utils/: CzytnikGrafow.cpp  CzytnikGrafow.h  GeneratorGrafow.cpp  GeneratorGrafow.h
Wyniki/: bellman-ford-list-results.csv  bellman-ford-matrix-results.csv  dijkstra-list-results.csv  dijkstra-matrix-results.csv  generate.py  kruskal-list-results.csv  kruskal-matrix-results.csv  prim-list-results.csv  prim-matrix-results.csv
